# RuTeR

./: .gitignore  LICENSE  README.md
ruter/: .gitignore  Cargo.toml  DEV_PROGRESS.md  PatcherDesign.md  README.md  TestHelp.md  rustc_output_json.md  ruter.toml
ruter/docs/: arch_scan_latest.json  configuration.md  design_review_notes.md
ruter/docs/diagrams/: 01_pipeline.dot  02_dispatch_flow.dot  03_preflight_pipeline.dot  04_llm_round_loop.dot  05_fix_flow.dot  06_module_layers.dot  07_data_model.dot  08_patcher_hierarchy.dot  09_e0433_layers.dot  10_llm_context.dot  11_coordinator_flow.dot  12_artifact_timeline.dot  13_e0432_layers.dot  14_e0560_layers.dot  15_e0599_layers.dot  16_e0308_layers.dot  16_e0308_layers_hybrid.dot
ruter/src/: config.rs  lib.rs  main.rs
ruter/src/cli/: mod.rs
ruter/src/coordinator/: mod.rs  patch_coordinator.rs
ruter/src/core/: diagnostic.rs  error_code.rs  fix_action.rs  function.rs  mod.rs  result.rs  span.rs
ruter/src/llm/: client.rs  context_builder.rs  executor.rs  handoff.rs  io_debug.rs  mod.rs  prompt_builder.rs  runtime_entry.rs  schema.rs
ruter/src/llm/context_builder/: budget.rs  (+2 more)
ruter/src/parser/: json_parser.rs  mod.rs
ruter/src/patchers/: mod.rs  registry.rs
ruter/src/runtime/: artifacts.rs  llm_verify_port.rs  mod.rs  reporter.rs  stages.rs  workflow.rs
ruter/src/transformer/: code_transformer.rs  mod.rs
ruter/tests/: E0433_humantime_gemini-2.5-flash-nothinking.json  cli_e0433_flow.rs  cli_llm_online_flow.rs  e0433_closure_loop.rs  fixture_e0433_regression.rs
ruter/tests/humantime-bk/: preprocess.json
(+192 files in other folders)
